KUBE/eks-three-tire/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: three-tier

spec:

  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      containers:

        - name: frontend

          image: qamre/three-tier-docker-compose-frontend:v1

          ports:
            - containerPort: 80

          readinessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 15
            periodSeconds: 20
