KUBE/eks-three-tire/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: database
  namespace: three-tier

spec:

  replicas: 1

  selector:
    matchLabels:
      app: database

  template:

    metadata:
      labels:
        app: database

    spec:

      containers:

        - name: mysql

          image: mysql:8.0

          ports:
            - containerPort: 3306

          volumeMounts:

            - name: mysql-storage
              mountPath: /var/lib/mysql

          readinessProbe:

            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h localhost -proot123

            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:

            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h localhost -proot123

            initialDelaySeconds: 30
            periodSeconds: 20

      volumes:

        - name: mysql-storage

          persistentVolumeClaim:
            claimName: mysql-pvc
