KUBE/eks-three-tire/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: three-tier-ingress

  namespace: three-tier

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/healthcheck-path: /

    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

    alb.ingress.kubernetes.io/success-codes: "200"

spec:

  ingressClassName: alb

  rules:

    - http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: frontend

                port:

                  number: 80
